--- a/app/src/main/res/layout/asesmen_kalimat.xml
+++ b/app/src/main/res/layout/asesmen_kalimat.xml
@@ -90,7 +90,7 @@
         android:background="@null"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/syllable_item_1"
+        android:id="@+id/kalimat_item_1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
@@ -102,11 +102,11 @@
         app:layout_constraintEnd_toEndOf="parent">
 
         <TextView
-            android:id="@+id/syllable_1"
+            android:id="@+id/kalimat_1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="Da - Di"
+            android:text="kalimat 1"
             android:textSize="18sp"
             android:textStyle="bold"
             android:padding="12dp"
@@ -130,23 +130,23 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/syllable_item_2"
+        android:id="@+id/kalimat_item_2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="16dp"
-        app:layout_constraintTop_toBottomOf="@id/syllable_item_1"
+        app:layout_constraintTop_toBottomOf="@id/kalimat_item_1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
         <TextView
-            android:id="@+id/syllable_2"
+            android:id="@+id/kalimat_2"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="Di - Du"
+            android:text="kalimat 2"
             android:textSize="18sp"
             android:textStyle="bold"
             android:padding="12dp"
@@ -170,23 +170,23 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/syllable_item_3"
+        android:id="@+id/kalimat_item_3"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="16dp"
-        app:layout_constraintTop_toBottomOf="@id/syllable_item_2"
+        app:layout_constraintTop_toBottomOf="@id/kalimat_item_2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
         <TextView
-            android:id="@+id/syllable_3"
+            android:id="@+id/kalimat_3"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="De - Do"
+            android:text="kalimat 3"
             android:textSize="18sp"
             android:textStyle="bold"
             android:padding="12dp"
@@ -210,23 +210,23 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/syllable_item_4"
+        android:id="@+id/kalimat_item_4"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="16dp"
-        app:layout_constraintTop_toBottomOf="@id/syllable_item_3"
+        app:layout_constraintTop_toBottomOf="@id/kalimat_item_3"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
         <TextView
-            android:id="@+id/syllable_4"
+            android:id="@+id/kalimat_4"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="Ga - Gi"
+            android:text="kalimat 4"
             android:textSize="18sp"
             android:textStyle="bold"
             android:padding="12dp"
@@ -250,23 +250,24 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/syllable_item_5"
+        android:id="@+id/kalimat_item_5"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="16dp"
-        app:layout_constraintTop_toBottomOf="@id/syllable_item_4"
+        app:layout_constraintTop_toBottomOf="@id/kalimat_item_4"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
         <TextView
-            android:id="@+id/syllable_5"
+            android:id="@+id/kalimat_5"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="Gi - Gu" android:textSize="18sp"
+            android:text="kalimat 5"
+            android:textSize="18sp"
             android:textStyle="bold"
             android:padding="12dp"
             android:background="@android:color/transparent"
@@ -299,7 +300,7 @@
         android:textColor="@color/black"
         android:textSize="18sp"
         android:background="@android:color/transparent"
-        app:layout_constraintTop_toBottomOf="@id/syllable_item_5"
+        app:layout_constraintTop_toBottomOf="@id/kalimat_item_5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="32dp"
