--- a/app/src/main/res/layout/asesmen_kalimat.xml
+++ b/app/src/main/res/layout/asesmen_kalimat.xml
@@ -31,7 +31,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:text="Asesmen Suku Kata"
+                android:text="Asesmen Kalimat"
                 android:textSize="20sp"
                 android:textColor="@color/black"
                 android:textStyle="bold"
