--- a/app/src/main/res/layout/asesmen_kata.xml
+++ b/app/src/main/res/layout/asesmen_kata.xml
@@ -31,7 +31,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:text="Asesmen Kalimat"
+                android:text="Asesmen Kata"
                 android:textSize="20sp"
                 android:textColor="@color/black"
                 android:textStyle="bold"
@@ -90,7 +90,7 @@
         android:background="@null"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/kalimat_item_1"
+        android:id="@+id/Kata_item_1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
@@ -102,11 +102,11 @@
         app:layout_constraintEnd_toEndOf="parent">
 
         <TextView
-            android:id="@+id/kalimat_1"
+            android:id="@+id/Kata_1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="kalimat 1"
+            android:text="Kata 1"
             android:textSize="18sp"
             android:textStyle="bold"
             android:padding="12dp"
@@ -130,23 +130,23 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/kalimat_item_2"
+        android:id="@+id/Kata_item_2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="16dp"
-        app:layout_constraintTop_toBottomOf="@id/kalimat_item_1"
+        app:layout_constraintTop_toBottomOf="@id/Kata_item_1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
         <TextView
-            android:id="@+id/kalimat_2"
+            android:id="@+id/Kata_2"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="kalimat 2"
+            android:text="Kata 2"
             android:textSize="18sp"
             android:textStyle="bold"
             android:padding="12dp"
@@ -170,23 +170,23 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/kalimat_item_3"
+        android:id="@+id/Kata_item_3"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="16dp"
-        app:layout_constraintTop_toBottomOf="@id/kalimat_item_2"
+        app:layout_constraintTop_toBottomOf="@id/Kata_item_2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
         <TextView
-            android:id="@+id/kalimat_3"
+            android:id="@+id/Kata_3"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="kalimat 3"
+            android:text="Kata 3"
             android:textSize="18sp"
             android:textStyle="bold"
             android:padding="12dp"
@@ -210,23 +210,23 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/kalimat_item_4"
+        android:id="@+id/Kata_item_4"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="16dp"
-        app:layout_constraintTop_toBottomOf="@id/kalimat_item_3"
+        app:layout_constraintTop_toBottomOf="@id/Kata_item_3"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
         <TextView
-            android:id="@+id/kalimat_4"
+            android:id="@+id/Kata_4"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="kalimat 4"
+            android:text="Kata 4"
             android:textSize="18sp"
             android:textStyle="bold"
             android:padding="12dp"
@@ -250,23 +250,23 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/kalimat_item_5"
+        android:id="@+id/Kata_item_5"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="16dp"
-        app:layout_constraintTop_toBottomOf="@id/kalimat_item_4"
+        app:layout_constraintTop_toBottomOf="@id/Kata_item_4"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
         <TextView
-            android:id="@+id/kalimat_5"
+            android:id="@+id/Kata_5"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="kalimat 5"
+            android:text="Kata 5"
             android:textSize="18sp"
             android:textStyle="bold"
             android:padding="12dp"
@@ -300,7 +300,7 @@
         android:textColor="@color/black"
         android:textSize="18sp"
         android:background="@android:color/transparent"
-        app:layout_constraintTop_toBottomOf="@id/kalimat_item_5"
+        app:layout_constraintTop_toBottomOf="@id/Kata_item_5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="32dp"
