--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
-    <style name="Theme.TemanBaca.Fullscreen" parent="Theme.MaterialComponents.Light.NoActionBar">
+<resources xmlns:tools="http://schemas.android.com/tools">
+    <style name="Theme.Mango" parent="Theme.MaterialComponents.Light.NoActionBar">
         <item name="android:windowFullscreen">true</item>
         <item name="android:windowNoTitle">true</item>
         <item name="colorPrimary">#FFFFFF</item>
@@ -11,7 +11,9 @@
         <item name="colorAccent">#2196F3</item>
         <item name="colorOnBackground">#000000</item>
         <item name="android:colorBackground">#FFFFFF</item>
-        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:statusBarColor"
+            tools:targetApi="l">@android:color/transparent
+        </item>
     </style>
 
     <style name="btnRandom">
