--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -63,7 +63,7 @@
         android:id="@+id/asesmenkata"
         android:layout_width="250dp"
         android:layout_height="60dp"
-        android:text="ASESMEN SUKU KATA"
+        android:text="ASESMEN KATA"
         android:textColor="@color/black"
         android:layout_marginTop="30dp"
         android:background="@drawable/style_button"
