--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -23,6 +23,7 @@
         <item name="android:textSize">28sp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">#1976D2</item>
+        <item name="textAllCaps">false</item>
         <item name="android:background">@drawable/letter_box_border</item>
         <item name="android:layout_margin">4dp</item>
     </style>
