--- a/app/src/main/res/layout/asesmen_huruf.xml
+++ b/app/src/main/res/layout/asesmen_huruf.xml
@@ -86,48 +86,36 @@
 
         <Button
             android:id="@+id/btn1"
-            android:layout_margin="4dp"
             android:text="a"
             style="@style/btnRandom"/>
 
         <Button
             android:id="@+id/btn2"
-            android:layout_margin="4dp"
             android:text="b"
             style="@style/btnRandom"/>
 
         <Button
             android:id="@+id/btn3"
-            android:layout_margin="4dp"
             android:text="c"
             style="@style/btnRandom"/>
 
         <Button
             android:id="@+id/btn4"
-            android:layout_margin="4dp"
             android:text="f"
             style="@style/btnRandom"/>
 
         <Button
             android:id="@+id/btn5"
-            android:layout_margin="4dp"
+            android:text="e"
+            style="@style/btnRandom"/>
+
+        <Button
+            android:id="@+id/btn6"
             android:text="e"
             style="@style/btnRandom"/>
 
     </LinearLayout>
 
-    <Button
-        android:id="@+id/random"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:backgroundTint="#8BAEBE"
-        android:text="🔄"
-        android:textSize="40dp"
-        android:layout_marginTop="30dp"
-        app:layout_constraintTop_toBottomOf="@id/layoutletters"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-    
     <Button
         android:id="@+id/next"
         android:layout_width="0dp"
@@ -137,7 +125,7 @@
         android:textSize="20dp"
         android:background="#00FFFFFF"
         android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@id/random"
+        app:layout_constraintTop_toBottomOf="@id/layoutletters"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
     
