--- a/app/src/main/res/layout/asesmen_huruf2.xml
+++ b/app/src/main/res/layout/asesmen_huruf2.xml
@@ -250,4 +250,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="32dp"/>
 
+    <Button
+        android:id="@+id/next"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="next"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        android:background="@android:color/transparent"
+        app:layout_constraintTop_toBottomOf="@id/acak"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="32dp"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
