--- a/app/src/main/res/layout/asesmen_huruf.xml
+++ b/app/src/main/res/layout/asesmen_huruf.xml
@@ -62,13 +62,13 @@
 
     <TextView
         android:id="@+id/txtTitle"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Mengeja Huruf"
         android:textSize="20dp"
         android:textStyle="bold"
+        android:gravity="center"
         android:layout_marginTop="1dp"
-        android:layout_marginStart="16dp"
         app:layout_constraintTop_toBottomOf="@id/divider"
         app:layout_constraintStart_toStartOf="parent"/>
 
