--- a/app/src/main/res/layout/asesmen_huruf.xml
+++ b/app/src/main/res/layout/asesmen_huruf.xml
@@ -74,46 +74,58 @@
 
     <LinearLayout
         android:id="@+id/layoutletters"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:gravity="center"
         android:layout_marginBottom="40dp"
         android:weightSum="5"
         app:layout_constraintTop_toBottomOf="@id/txtTitle"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/next"
+        app:layout_constraintVertical_bias="0.4">
 
-        <Button
-            android:id="@+id/btn1"
-            android:text="a"
-            style="@style/btnRandom"/>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center">
+            <Button
+                android:id="@+id/btn1"
+                android:text="a"
+                style="@style/btnRandom"/>
 
-        <Button
-            android:id="@+id/btn2"
-            android:text="b"
-            style="@style/btnRandom"/>
+            <Button
+                android:id="@+id/btn2"
+                android:text="b"
+                style="@style/btnRandom"/>
 
-        <Button
-            android:id="@+id/btn3"
-            android:text="c"
-            style="@style/btnRandom"/>
+            <Button
+                android:id="@+id/btn3"
+                android:text="c"
+                style="@style/btnRandom"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:layout_marginTop="8dp">
+            <Button
+                android:id="@+id/btn4"
+                android:text="f"
+                style="@style/btnRandom"/>
+            <Button
+                android:id="@+id/btn5"
+                android:text="e"
+                style="@style/btnRandom"/>
 
-        <Button
-            android:id="@+id/btn4"
-            android:text="f"
-            style="@style/btnRandom"/>
-
-        <Button
-            android:id="@+id/btn5"
-            android:text="e"
-            style="@style/btnRandom"/>
-
-        <Button
-            android:id="@+id/btn6"
-            android:text="e"
-            style="@style/btnRandom"/>
-
+            <Button
+                android:id="@+id/btn6"
+                android:text="e"
+                style="@style/btnRandom"/>
+        </LinearLayout>
     </LinearLayout>
 
     <Button
