--- a/app/src/main/res/layout/asesmen_huruf.xml
+++ b/app/src/main/res/layout/asesmen_huruf.xml
@@ -99,6 +99,7 @@
             android:layout_height="wrap_content"
             android:text="Carilah huruf ..."
             android:textSize="20dp"
+            android:textAllCaps="false"
             android:layout_marginStart="30dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
