--- a/app/src/main/res/layout/asesmen_huruf2.xml
+++ b/app/src/main/res/layout/asesmen_huruf2.xml
@@ -73,12 +73,48 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="16dp"/>
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/score_and_question_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@id/txtTitle"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:paddingBottom="16dp">
+
+        <TextView
+            android:id="@+id/txtscore"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Score: "
+            android:textSize="20dp"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+
+        <TextView
+            android:id="@+id/txtsoal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Carilah huruf ..."
+            android:textSize="20dp"
+            android:textAllCaps="false"
+            android:layout_marginStart="30dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
     <!-- Huruf C dan L -->
     <TextView
         android:id="@+id/tvC"
         style="@style/LetterBox"
         android:text="C"
-        app:layout_constraintTop_toBottomOf="@id/txtTitle"
+        app:layout_constraintTop_toBottomOf="@id/score_and_question_container"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/cbC"
         app:layout_constraintHorizontal_chainStyle="packed"
