--- a/app/src/main/res/layout/asesmen_huruf.xml
+++ b/app/src/main/res/layout/asesmen_huruf.xml
@@ -93,6 +93,18 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
 
+        <TextView
+            android:id="@+id/txtsoal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Carilah huruf ..."
+            android:textSize="20dp"
+            android:textAllCaps="false"
+            android:layout_marginStart="30dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <LinearLayout
